--- a/nablapps/album/templates/album/album_image.html
+++ b/nablapps/album/templates/album/album_image.html
@@ -1,38 +1,35 @@
 {% extends "base.html" %}
+{% load bootstrap4 %}
 {% block title %}{{ album.title }}{% endblock %}
 
 {% block more_head %}
 {% endblock %}
 
 {% block content %}
-<div class="">
-    <h1><a href="{{ album.get_absolute_url }}">{{ album.title }}</a></h1>
-    <img src="{{ image.file.url }}" class="img-fluid" style="image-orientation: from-image" />
-  <p>
-    {{ image.description }}
-  </p>
-  <nav>
-      <ul class="pagination d-flex justify-content-between">
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="../{{ page_obj.previous_page_number }}/"><span aria-hidden="true">&larr;</span> forrige</a>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item " aria-current="page">
+                <a href="{{ overview_url }}">Albumoversikt</a>
             </li>
-        {% endif %}
+            <li class="breadcrumb-item">
+                <a href="{{ album.get_absolute_url }}">{{ album.title }}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                {{ page_obj.number }}
+            </li>
+            </li>
+        </ol>
+    </nav>
+    <figure>
+        <img src="{{ image.file.url }}" class="figure-img img-fluid" style="image-orientation: from-image"/>
+        <figcaption class="figure-caption"> {{ image.description }} </figcaption>
+    </figure>
 
-          <li class="disabled page-item pager-counter">
-              <a class="page-link">  Bilde {{ page_obj.number }} av {{ page_obj.paginator.num_pages }} </a>
-          </li>
-
-          {% if page_obj.has_next %}
-              <li class="page-item">
-                  <a class="page-link" href="../{{ page_obj.next_page_number }}/">neste  <span aria-hidden="true">&rarr;</span></a>
-              </li>
-          {% endif %}
-      </ul>
-  </nav>
-</div>
+    <nav class="d-flex justify-content-center">
+        {% bootstrap_pagination page_obj parameter_name="page" %}
+    </nav>
 {% endblock content %}
 
 {% block sidebar %}
-{% include "content/includes/sidebar-admin.html" %}
+    {% include "content/includes/sidebar-admin.html" %}
 {% endblock %}
