Adds quota in frontend

--- a/nablapps/vote/templates/vote/voting_list.html
+++ b/nablapps/vote/templates/vote/voting_list.html
@@ -98,6 +98,7 @@
                      <ul>
                          <li v-for="winner in winners">[[ winner.text ]]</li>
                      </ul>
+                     Qutoa: [[ vote.quota ]]
                  </div>
                  <div v-if="errors.length" class="alert alert-warning">
                      <ul>
