--- a/nablapps/vote/templates/vote/voting_event_user_view.html
+++ b/nablapps/vote/templates/vote/voting_event_user_view.html
@@ -113,7 +113,7 @@
             <div v-else>
                 <i>Stemme sendt inn</i>
             </div>
-            <div class="voting_item__description">
+            <div class="voting_item__description" v-if="vote.description">
                 <span class="fas toggle" :class="show_description ? 'fa-minus' : 'fa-plus'" @click="show_description=!show_description"></span>
                 <div class="description" v-html="vote.description" v-if="show_description"></div>
             </div>
