Står ikke lenger bedpres på kalender når vinduet blir for smalt

--- a/nablapps/events/templates/events/event_main_page.html
+++ b/nablapps/events/templates/events/event_main_page.html
@@ -70,7 +70,7 @@
                         {{ event.company }}
                     </div>
                     {% if event.is_bedpres %}
-                    <div class="event_list__event__meta right">
+                    <div class="event_list__event__meta right d-none d-sm-block">
                         Bedpres
                     </div>
                     {% endif %}
