Removed markdown from lead paragraph on news articles

--- a/templates/includes/info_card.html
+++ b/templates/includes/info_card.html
@@ -38,7 +38,7 @@
             {% endif %}
         </a>
     </h5>
-    <p class="card-text">{{ content.lead_paragraph|markdown:"unsafe" }}</p>
+    <p class="card-text">{{ content.lead_paragraph }}</p>
 
 </div>
 {% if show_details|default:False %}
